package xyz.jelmer8.models;

import java.awt.image.BufferedImage;

public record ImageModel(BufferedImage image) {

}
